finished the grid layout

--- a/sass/main.css
+++ b/sass/main.css
@@ -1,1 +1,65 @@
-/*# sourceMappingURL=main.css.map */
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+*,
+::after,
+::before {
+  padding: 0;
+  margin: 0;
+  box-sizing: inherit;
+}
+
+body {
+  font-family: "Nunito", sans-serif;
+  color: #6d5d4b;
+  font-weight: 300;
+  line-height: 1.6;
+}
+body > * {
+  padding: 3rem;
+  font-size: 2rem;
+  color: #fff;
+}
+
+.container {
+  display: grid;
+  grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+  grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+}
+
+.sidebar {
+  background-color: chocolate;
+}
+
+.header {
+  background-color: greenyellow;
+}
+
+.realtors {
+  background-color: plum;
+}
+
+.section-features {
+  background-color: black;
+}
+
+.story-photos {
+  background-color: brown;
+}
+.story-text {
+  background-color: coral;
+}
+
+.section-homes {
+  background-color: orangered;
+}
+
+.section-gallery {
+  background-color: yellow;
+}
+
+.footer {
+  background-color: green;
+}/*# sourceMappingURL=main.css.map */
