--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -32,12 +32,6 @@ body {
   color: $color-grey-dark-2;
   font-weight: 300;
   line-height: 1.6;
-
-  & > * {
-    padding: 3rem;
-    font-size: 2rem;
-    color: #fff;
-  }
 }
 
 .container {
@@ -45,9 +39,7 @@ body {
   grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
   grid-template-columns:
     [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr)
-    [center-start] repeat(
-      8,
-      [col-start] minmax(min-content, 14rem) [col-end]
-    ) [center-end] minmax(6rem, 1fr)
+    [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
+    [center-end] minmax(6rem, 1fr)
     [full-end];
 }
