--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,3 +1,56 @@
 .header {
   background-color: greenyellow;
+  grid-column: full-start/col-start 7;
+  background-image: linear-gradient(
+      rgba($color-secondary, 0.9),
+      rgba($color-secondary, 0.9)
+    ),
+    url(../img/house-3.jpeg);
+  background-size: cover;
+  background-position: center;
+  padding: 8rem;
+  gap: 1.5rem;
+  display: grid;
+  grid-template-rows: 1fr repeat(2, min-content) 1fr min-content;
+  justify-content: center;
+
+  &__logo {
+    height: 3rem;
+    justify-self: center;
+  }
+
+  &__btn {
+    justify-self: start;
+    align-self: flex-start;
+  }
+
+  &__seenon {
+    &-text {
+      font-size: 1.6rem;
+      color: $color-grey-light-2;
+      display: grid;
+      grid-template-columns: 1fr max-content 1fr;
+      align-items: center;
+      gap: 1rem;
+      &::before,
+      &::after {
+        content: '';
+        display: block;
+        width: 100%;
+        height: 1px;
+        background-color: currentColor;
+      }
+    }
+
+    &-logos {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      justify-items: center;
+
+      img {
+        height: 2.5rem;
+        filter: brightness(80%);
+      }
+    }
+  }
 }
