--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -1,3 +1,31 @@
 .realtors {
-  background-color: plum;
+  background-color: $color-secondary;
+  grid-column: col-start 7 / full-end;
+  padding: 0 10vh;
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  justify-items: center;
+  gap: 2rem;
+
+  &__list {
+    display: grid;
+    grid-template-columns: repeat(2, max-content);
+    grid-template-rows: repeat(2, 1fr);
+    align-items: center;
+    row-gap: 5vh;
+    column-gap: 2rem;
+  }
+
+  &__img {
+    width: 7rem;
+    border-radius: 50%;
+    display: block;
+  }
+
+  &__sold {
+    text-transform: uppercase;
+    color: $color-grey-light-2;
+    margin-top: -3px;
+  }
 }
