--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -1,9 +1,33 @@
 .story {
-  &-photos {
-    background-color: brown;
+  &__pictures {
+    grid-column: full-start / col-end 4;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    align-items: center;
+    background-image: linear-gradient(
+        rgba($color-primary, 0.5),
+        rgba($color-primary, 0.5)
+      ),
+      url(../img/back.jpg);
+    background-position: center;
+    background-size: cover;
+  }
+
+  &__img {
+    width: 100%;
+    &--1 {
+      grid-column: 2/6;
+      grid-row: 2 / span 4;
+    }
+    &--2 {
+      grid-column: 4/-1;
+      grid-row: 3 / span 4;
+      width: 115%;
+    }
   }
 
   &-text {
-    background-color: coral;
+    grid-column: col-end 4 / -1;
   }
 }
